add support for 1.21.4, fix slimefun api breaking changes